--- a/src/static/index.html
+++ b/src/static/index.html
@@ -47,4 +47,10 @@
 
     <script src="app.js"></script>
   </body>
-</html>
+    <h1>Welcome to the App</h1>
+    <form id="generateForm">
+      <input type="text" id="inputText" placeholder="Enter text" required />
+      <button type="submit">Send</button>
+    </form>
+    <div id="result"></div>
+    <script src="app.js"></script>
